recursion.cons.length.Length.scala.code
def length(l:List[Int]): Int = {
  if (l==nil) {
    return 0
  }
  return 1 + length(l.tail)
}